src/objects/Map_Pin_Color_Configuration__c.object
<CustomObject>
    <description>Maps pin color on the basis of fields selected as part of Map Builder Configuration.</description>
    <fields>
        <fullName>Assessible_Object_Field__c</fullName>
        <label>Assessible Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessible_Object__c</fullName>
        <label>Assessible Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_Mapping__c</fullName>
        <label>Color Mapping</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Map Pin Color Configuration</label>
    <nameField>
        <label>Map Pin Color Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Pin Color Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>